crates/swc_ecma_parser/tests/test262-error-references/fail/14d6adc74d396c58.js.stderr
error: Rest element must be final element
 --> $DIR/tests/test262-parser/fail/14d6adc74d396c58.js:1:2
  |
1 | [...x, y] = 0
  |  ^^^^

